# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydisney"
version = "1.0.0"
description = "A Feature rich API wrapper for Disney+ made with python."
readme = "README.md"
authors = [{ name = "Pamparampampam"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["disney", "disneyplus", "api", "wrapper", "client", "python"]
dependencies = [
    "pysubs2 == 1.6.1",
    "m3u8 == 3.6.0",
    "requests >= 2.31.0"
]
requires-python = ">=3.7"

[project.urls]
Github = "https://github.com/pam-param-pam/Disney-Plus-api-wrapper"

