# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydisney"
version = "3.0.2"
description = "A Feature rich API wrapper for Disney+ made with python. Allows for subtitle and audio download"
readme = "README.md"
authors = [{ name = "Pamparampampam"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["disney", "disneyplus", "api", "wrapper", "client", "python", "pydisney", "subtitle", "subtitle-downloader", "downloader", "disney+"]
dependencies = [
    "requests >= 2.32.3",
    "m3u8 >= 3.6.0"
]
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Github = "https://github.com/pam-param-pam/Disney-Plus-api-wrapper"

